internal/gatewayapi/testdata/tlsroute-securitypolicy-with-multiple-rules.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-tls
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: tls-passthrough
      protocol: TLS
      port: 8443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
tlsRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TLSRoute
  metadata:
    namespace: default
    name: tlsroute-multiple-rules
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-tls
      sectionName: tls-passthrough
    hostnames:
    - "*.example.com"
    rules:
    - name: db-traffic
      backendRefs:
      - name: database-service
        port: 3306
    - name: api-traffic
      backendRefs:
      - name: api-service
        port: 8443
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: default
    name: sp-db-traffic-only
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: TLSRoute
      name: tlsroute-multiple-rules
      sectionName: db-traffic
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-db-subnet
        principal:
          clientCIDRs:
          - 10.0.1.0/24
