internal/gatewayapi/testdata/tlsroute-securitypolicy-with-multiple-rules.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-tls
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: tls-passthrough
      port: 8443
      protocol: TLS
      tls:
        mode: Passthrough
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tls-passthrough
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TLSRoute
infraIR:
  envoy-gateway/gateway-tls:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-tls/tls-passthrough
        ports:
        - containerPort: 8443
          name: tls-8443
          protocol: TLS
          servicePort: 8443
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-tls
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-tls
      namespace: envoy-gateway-system
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: sp-db-traffic-only
    namespace: default
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-db-subnet
        principal:
          clientCIDRs:
          - 10.0.1.0/24
    targetRef:
      group: gateway.networking.k8s.io
      kind: TLSRoute
      name: tlsroute-multiple-rules
      sectionName: db-traffic
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-tls
        namespace: envoy-gateway
        sectionName: tls-passthrough
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
tlsRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TLSRoute
  metadata:
    name: tlsroute-multiple-rules
    namespace: default
  spec:
    hostnames:
    - '*.example.com'
    parentRefs:
    - name: gateway-tls
      namespace: envoy-gateway
      sectionName: tls-passthrough
    rules:
    - backendRefs:
      - name: database-service
        port: 3306
      name: db-traffic
    - backendRefs:
      - name: api-service
        port: 8443
      name: api-traffic
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: |-
          Service default/database-service not found.
          Service default/api-service not found.
        reason: BackendNotFound
        status: "False"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-tls
        namespace: envoy-gateway
        sectionName: tls-passthrough
xdsIR:
  envoy-gateway/gateway-tls:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-tls-e5408cf3
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-tls
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-tls-e5408cf3
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-tls
          protocol: TCP
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 8443
      metadata:
        kind: Gateway
        name: gateway-tls
        namespace: envoy-gateway
        sectionName: tls-passthrough
      name: envoy-gateway/gateway-tls/tls-passthrough
      port: 8443
      routes:
      - destination:
          metadata:
            kind: TLSRoute
            name: tlsroute-multiple-rules
            namespace: default
          name: tlsroute/default/tlsroute-multiple-rules/rule/-1
        metadata:
          kind: TLSRoute
          name: tlsroute-multiple-rules
          namespace: default
        name: tlsroute/default/tlsroute-multiple-rules
        tls:
          inspector:
            snis:
            - '*.example.com'
